<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16603b"
    tools:context="np.com.shrestharanjit.foursemester.Notes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <Button
            android:id="@+id/tw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundshapebtn"

            android:text="@string/technical_writing"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"

            android:background="@drawable/roundshapebtn2"
            android:text="@string/dbms"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/sad"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn4"
            android:text="@string/system_analysis"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/toc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn1"
            android:text="@string/theory_of_computation"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/cg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn3"
            android:text="@string/computer_graphics"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/ics"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn2"
            android:text="@string/cognitive_science"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />
    </LinearLayout>
</ScrollView>
