<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="np.com.shrestharanjit.foursemester.DBMS">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:padding="20dp">

        <Button
            android:id="@+id/dbmsunit1"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/roundshapebtn"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_1_introduction"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbmsunit2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn4"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_2_entity_relationship_model"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbmsunit3"

            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn1"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_3_relational_model"
            android:textAlignment="viewStart"
            android:textAllCaps="false"

            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbmsunit4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn2"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_4_sql"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbmsunit5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn3"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_5_integrity_constraints"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />

        <Button
            android:id="@+id/dbmsunit6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/roundshapebtn"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:text="@string/_6_relational_database_design"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="22sp" />


    </LinearLayout>

</ScrollView>
